--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
 		  </div>
 		  <div class="extra content">
 		    <p class="right floated created">Mobile</p>
-		    <p class="friend">+49 157 7784 3763</p>
+		    <p class="friend">+49 123 4567 8910</p>
 		  </div>
 		  <div class="extra content">
 		    <p class="right floated created">Address</p>
 		    <p class="friend">
-			    Fallenbrunnen 19<br>
-			    Room 141<br>
-			    88045  Friedrichshafen<br>
+			    Street 123<br>
+			    Room 123<br>
+			    12345  City<br>
 			    Germany
 			</p>
 		  </div>
