Source Code Button and Icons

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <!--SKILLS-->
 <!--END OF SKILLS-->
   <div class="ui horizontal divider">
-    WORK EXPERIENCE
+    <i class="travel icon"></i> WORK EXPERIENCE
   </div>
 <!--ENTRY WORK-->
 
@@ -121,7 +121,7 @@
 	</div>
 <!--END OF ENTRY WORK-->
   <div class="ui horizontal divider">
-    EDUCATION
+    <i class="book icon"></i> EDUCATION
   </div>
 <!--ENTRY EDU-->
 
@@ -133,15 +133,10 @@
 	    	<div class="content">
 				<p class="header">B.A. Corporate Management & Economics</p>
 				<div class="meta">
-	  				<p class="created"><a class="meta" href="https://zu.de" target="_blank">Zeppelin University</a> | 2014 - TODAY</p></p>
+	  				<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2014 - TODAY</p></p>
 				</div>
 				<div class="description">
-	  				Co-Founded the initiative in 2015 with
-						fellow students to motivate young people
-						to develop coding skills. Tasks vary
-						from organizing an annual three-month
-						coding bootcamp to hosting workshops
-						and acquiring supporters.
+					Currently enrolled in the 6th semester of the best university there is. 
 				</div>
 				<div class="extra">
 	  				<p class="created">Current Grade: 1,0<br>
@@ -151,6 +146,15 @@
 	    </div>
 	</div>
 </div>
-</div>
 <!--END OF ENTRY EDU-->
+</div>
+<!--END OF GRID-->
+  
+<!--SOURCE CODE BUTTON-->
+<div class="gitbutton">
+  <div class="ui primary button">
+    <a href="https://github.com/Falk92/codecats_cv_basics" target="_blank" style="color: white;"><i class="github icon"></i> View Source Code</a>
+  </div>
+ </div>
+<!--END OF SOURCE CODE BUTTON-->
 </body>
