--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		  <div class="content">
 		    <div class="header">Falk Heger</div>
 		    <div class="meta">
-				<a class="group">B.A. Corporate Management & Economics</a><br>
-				<a class="group">Co-Founder CodeCats</a><br>
+				<a class="group" href="https://www.zu.de/studium-weiterbildung/cme/index.php" target="_blank">B.A. Corporate Management & Economics</a><br>
+				<a class="group" href="http://codecats.io/#team" target="_blank">Co-Founder CodeCats</a><br>
 				<a class="group">IT StudentSupport</a><br>
 		    </div>
 		    <div class="description">This is my personal online CV, designed with HTML, CSS and JavaScript. In the backend will be running Python Flask  to update it, whenever it needs to be updated!</div>
@@ -116,6 +116,11 @@
 				<div class="extra">
 	  				<img src="img/falk.png" class="ui circular avatar image"> Reference: <a class="created" href="mailto:f.heger@zeppelin-university.net">Falk Heger</a>
 				</div>
+				<div class="ui right floated main menu">
+					<a class="bug popup icon item" data-content="Edit this entry" href="#">
+						<i class="edit icon"></i>
+					</a>
+				</div>
 	    	</div>
 	    </div>
 	</div>
@@ -142,6 +147,11 @@
 	  				<p class="created">Current Grade: 1,0<br>
 	  				Coach: Stephan A. Jansen</p>
 				</div>
+				<div class="ui right floated main menu">
+					<a class="bug popup icon item" data-content="Edit this entry" href="#">
+						<i class="edit icon"></i>
+					</a>
+				</div>
 	    	</div>
 	    </div>
 	</div>
@@ -149,7 +159,14 @@
 <!--END OF ENTRY EDU-->
 </div>
 <!--END OF GRID-->
-  
+<!--ADD BUTTON-->
+<div class="ui centered grid">
+  <div class="ui animated fade primary button">
+    <div class="visible content"><i class="add icon"></i></div>
+    <div class="hidden content">Add</div>
+  </div>
+</div>
+<!--END OF ADD BUTTON-->
 <!--SOURCE CODE BUTTON-->
 <div class="gitbutton">
   <div class="ui primary button">
