--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 
 		<title>CodeCats: Your online CV with Python</title>
+		<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 
 <!--JavaScript Framework: SemanticUI-->
 		<script type="text/javascript" src="js/package.js"></script>
@@ -63,7 +64,7 @@
 		    <div class="meta">
 				<a class="group" href="https://www.zu.de/studium-weiterbildung/cme/index.php" target="_blank">B.A. Corporate Management & Economics</a><br>
 				<a class="group" href="http://codecats.io/#team" target="_blank">Co-Founder CodeCats</a><br>
-				<a class="group">IT StudentSupport</a><br>
+				<p class="group">IT StudentSupport</p>
 		    </div>
 		    <div class="description">This is my personal online CV, designed with HTML, CSS and JavaScript. In the backend will be running Python Flask  to update it, whenever it needs to be updated!</div>
 		  </div>
@@ -157,13 +158,16 @@
 	</div>
 </div>
 <!--END OF ENTRY EDU-->
+
 </div>
 <!--END OF GRID-->
 <!--ADD BUTTON-->
 <div class="ui centered grid">
   <div class="ui animated fade primary button">
+  <a href="create.html" style="color:white;">
     <div class="visible content"><i class="add icon"></i></div>
     <div class="hidden content">Add</div>
+  </a>
   </div>
 </div>
 <!--END OF ADD BUTTON-->
