--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	    	<div class="content">
 				<p class="header">Head of Project & Co-Founder</p>
 				<div class="meta">
-	  				<p class="created"><a class="meta" href="http://codecats.io" target="_blank">CodeCats</a> | 2015 - TODAY</p></p>
+	  				<p class="created"><a class="meta" href="http://codecats.io" target="_blank">CodeCats</a> | 2015 - TODAY</p>
 				</div>
 				<div class="description">
 	  				Co-Founded the initiative in 2015 with
@@ -116,6 +116,7 @@
 				</div>
 				<div class="extra">
 	  				<img src="img/falk.png" class="ui circular avatar image"> Reference: <a class="created" href="mailto:f.heger@zeppelin-university.net">Falk Heger</a>
+	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
 				</div>
 				<div class="ui right floated main menu">
 					<a class="bug popup icon item" data-content="Edit this entry" href="#">
@@ -147,6 +148,7 @@
 				<div class="extra">
 	  				<p class="created">Current Grade: 1,0<br>
 	  				Coach: Stephan A. Jansen</p>
+	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
 				</div>
 				<div class="ui right floated main menu">
 					<a class="bug popup icon item" data-content="Edit this entry" href="#">
