fixing grid and buttons

--- a/index.html
+++ b/index.html
@@ -88,12 +88,45 @@
 		</div>
 	</div>
 <!--END OF CONTACT BOX-->
-<div class="eight wide column">
+<div class="ui eight wide column">
 <!--SKILLS-->
 <!--END OF SKILLS-->
   <div class="ui horizontal divider">
     <i class="travel icon"></i> WORK EXPERIENCE
   </div>
+<!--ENTRY WORK-->
+
+	<div class="ui relaxed divided items">
+		<div class="item">
+	    	<div class="ui small image">
+				<img src="img/cc_logo.png">
+	    	</div>
+	    	<div class="content">
+				<p class="header">Head of Project & Co-Founder</p>
+				<div class="meta">
+	  				<p class="created"><a class="meta" href="http://codecats.io" target="_blank">CodeCats</a> | 2015 - TODAY</p>
+				</div>
+				<div class="description">
+	  				Co-Founded the initiative in 2015 with
+						fellow students to motivate young people
+						to develop coding skills. Tasks vary
+						from organizing an annual three-month
+						coding bootcamp to hosting workshops
+						and acquiring supporters.
+				</div>
+				<div class="extra">
+	  				<img src="img/falk.png" class="ui circular avatar image"> Reference: <a class="created" href="mailto:f.heger@zeppelin-university.net">Falk Heger</a>
+	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+				</div>
+				<div class="ui right floated main menu">
+					<a class="bug popup icon item" data-content="Edit this entry" href="#">
+						<i class="edit icon"></i>
+					</a>
+				</div>
+	    	</div>
+	    </div>
+	</div>
+<!--END OF ENTRY WORK-->
 <!--ENTRY WORK-->
 
 	<div class="ui relaxed divided items">
@@ -158,20 +191,50 @@
 	    	</div>
 	    </div>
 	</div>
+	<!--ENTRY EDU-->
+
+	<div class="ui relaxed divided items">
+		<div class="item">
+	    	<div class="ui small image">
+				<img src="img/zu_logo.png">
+	    	</div>
+	    	<div class="content">
+				<p class="header">B.A. Corporate Management & Economics</p>
+				<div class="meta">
+	  				<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2014 - TODAY</p></p>
+				</div>
+				<div class="description">
+					Currently enrolled in the 6th semester of the best university there is. 
+				</div>
+				<div class="extra">
+	  				<p class="created">Current Grade: 1,0<br>
+	  				Coach: Stephan A. Jansen</p>
+	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+				</div>
+				<div class="ui right floated main menu">
+					<a class="bug popup icon item" data-content="Edit this entry" href="#">
+						<i class="edit icon"></i>
+					</a>
+				</div>
+	    	</div>
+	    </div>
+	</div>
+</div>
+<!--END OF ENTRY EDU-->
 </div>
 <!--END OF ENTRY EDU-->
 
 </div>
 <!--END OF GRID-->
 <!--ADD BUTTON-->
-<div class="ui centered grid">
-  <div class="ui animated fade primary button">
+<!-- <div class="ui centered grid"> -->
+  <div class="ui animated fade primary button addbutton">
   <a href="create.html" style="color:white;">
     <div class="visible content"><i class="add icon"></i></div>
     <div class="hidden content">Add</div>
   </a>
   </div>
-</div>
+<!-- </div> -->
 <!--END OF ADD BUTTON-->
 <!--SOURCE CODE BUTTON-->
 <div class="gitbutton">
