--- a/index.html
+++ b/index.html
@@ -86,11 +86,65 @@
 			</p>
 		  </div>
 		</div>
-	</div>
-<!--END OF CONTACT BOX-->
-<div class="ui eight wide column">
-<!--SKILLS-->
+		<!--END OF CONTACT BOX-->
+<!--Skills-->
+		<div class="ui card">
+		  <div class="image">
+		    <div class="ui dimmer">
+		<div class="content">
+		  <div class="center">
+
+		  </div>
+		</div>
+		    </div>
+		  </div>
+		  <div class="content">
+		    <div class="header"><i class="wechat icon"></i> LANGUAGES</div>
+		    <div class="description">These are some of my skills in my huge skillset, which can be evidenced in my former work experience.</div>
+		  </div>
+		  <div class="extra content">
+		    <p class="left floated created">HTML / CSS</p>
+		  </div>
+
+
+
+
+		  </div>
+
+
+		<div class="ui card">
+		  <div class="image">
+		    <div class="ui dimmer">
+		<div class="content">
+		  <div class="center">
+		  </div>
+		</div>
+		    </div>
+		  </div>
+		  <div class="content">
+		    <div class="header"><i class="settings icon"></i> SKILLS</div>
+		    <div class="description">These are some of my languages i speak.</div>
+		  </div>
+		  <div class="extra content">
+		    <p class="left floated created"><i class="germany flag"></i> German</p>
+		  </div>
+		  		  <div class="extra content">
+		    <p class="left floated created"><i class="gb flag"></i> English</p>
+		  </div>
+		  		  		  <div class="extra content">
+		    <p class="left floated created"><i class="china flag"></i> Chinese</p>
+		  </div>
+		  </div>
+		
+
+		</div>
 <!--END OF SKILLS-->
+
+<!--END OF LEFT BOX-->
+
+<div class="ui eight wide column">
+
+
   <div class="ui horizontal divider">
     <i class="travel icon"></i> WORK EXPERIENCE
   </div>
@@ -132,23 +186,56 @@
 	<div class="ui relaxed divided items">
 		<div class="item">
 	    	<div class="ui small image">
-				<img src="img/cc_logo.png">
+				<img src="img/zu_logo.png">
 	    	</div>
 	    	<div class="content">
-				<p class="header">Head of Project & Co-Founder</p>
+				<p class="header">IT StudentSupport</p>
 				<div class="meta">
-	  				<p class="created"><a class="meta" href="http://codecats.io" target="_blank">CodeCats</a> | 2015 - TODAY</p>
+	  				<p class="created"><a class="meta" href="https://www.zu.de" target="_blank">Zeppelin University</a> | 2014 - TODAY</p>
 				</div>
 				<div class="description">
-	  				Co-Founded the initiative in 2015 with
-						fellow students to motivate young people
-						to develop coding skills. Tasks vary
-						from organizing an annual three-month
-						coding bootcamp to hosting workshops
-						and acquiring supporters.
+	  				Leading the IT Student Support. Providing
+					technical support to all students and
+					employees, repairing laptops / computers
+					and solving soft- and hardware problems,
+					both in person as well as via a
+					helpdesk.
 				</div>
 				<div class="extra">
-	  				<img src="img/falk.png" class="ui circular avatar image"> Reference: <a class="created" href="mailto:f.heger@zeppelin-university.net">Falk Heger</a>
+	  				<p class="created"><i class="spain flag"></i>Sevilla, Spain</p>
+				</div>
+				<div class="ui right floated main menu">
+					<a class="bug popup icon item" data-content="Edit this entry" href="#">
+						<i class="edit icon"></i>
+					</a>
+				</div>
+	    	</div>
+	    </div>
+	</div>
+<!--END OF ENTRY WORK-->
+<!--ENTRY WORK-->
+
+	<div class="ui relaxed divided items">
+		<div class="item">
+	    	<div class="ui small image">
+				<img src="img/netbeast.png">
+	    	</div>
+	    	<div class="content">
+				<p class="header">Business Development</p>
+				<div class="meta">
+	  				<p class="created"><a class="meta" href="https://netbeast.co/" target="_blank">Netbeast SL</a> | 2016 - 2016</p>
+				</div>
+				<div class="description">
+	  				Internship as business developer for the
+					European and North-American market
+					at a near market entry startup. Key tasks
+					included go to market strategy, preparing
+					business cooperation and creating
+					presentations for the acquisition.
+					Position as Visiting Associate, including representing
+					Netbeast at the new.New festival, after the internship.
+				</div>
+				<div class="extra">
 	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
 				</div>
 				<div class="ui right floated main menu">
@@ -179,8 +266,8 @@
 					Currently enrolled in the 6th semester of the best university there is. 
 				</div>
 				<div class="extra">
-	  				<p class="created">Current Grade: 1,0<br>
-	  				Coach: Stephan A. Jansen</p>
+	  				<p class="created">Current German Grade: 1,0<br>
+	  				Coach: Prof Dr Stephan A. Jansen</p>
 	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
 				</div>
 				<div class="ui right floated main menu">
@@ -192,23 +279,51 @@
 	    </div>
 	</div>
 	<!--ENTRY EDU-->
-
+<!--ENTRY HP-->
 	<div class="ui relaxed divided items">
 		<div class="item">
 	    	<div class="ui small image">
-				<img src="img/zu_logo.png">
+				<img src="img/zu.jpg">
 	    	</div>
 	    	<div class="content">
-				<p class="header">B.A. Corporate Management & Economics</p>
+				<p class="header">Humboldt Project - Investments in Cybersecurity</p>
 				<div class="meta">
-	  				<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2014 - TODAY</p></p>
+	  				<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2016 - TODAY</p></p>
 				</div>
 				<div class="description">
 					Currently enrolled in the 6th semester of the best university there is. 
 				</div>
 				<div class="extra">
-	  				<p class="created">Current Grade: 1,0<br>
-	  				Coach: Stephan A. Jansen</p>
+					<p class="created">Supervisor: Prof Dr Jörn von Lucke | M.A. Katharina 'Tinka' Große</p>
+	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+				</div>
+				<div class="ui right floated main menu">
+					<a class="bug popup icon item" data-content="Edit this entry" href="#">
+						<i class="edit icon"></i>
+					</a>
+				</div>
+	    	</div>
+	    </div>
+	</div>
+<!--END OF HP-->
+	<!--ENTRY ZP-->
+
+	<div class="ui relaxed divided items">
+		<div class="item">
+	    	<div class="ui small image">
+				<img src="img/zu.jpg">
+	    	</div>
+	    	<div class="content">
+				<p class="header">Zeppelin Project - Cities</p>
+				<div class="meta">
+	  				<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2014 - 2015</p></p>
+				</div>
+				<div class="description">
+					Currently enrolled in the 6th semester of the best university there is. 
+				</div>
+				<div class="extra">
+	  				<p class="created">German Grade: 1,3<br>
+	  				Supervisor: Prof Dr phil Markus Rhomberg</p>
 	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
 				</div>
 				<div class="ui right floated main menu">
@@ -220,7 +335,12 @@
 	    </div>
 	</div>
 </div>
+<!--END OF ZP-->
+
+<!--END?-->
+</div>
 <!--END OF ENTRY EDU-->
+
 </div>
 <!--END OF ENTRY EDU-->
 
