--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		  </div>
 		  <div class="content">
 		    <div class="header"><i class="settings icon"></i> SKILLS</div>
-		    <div class="description">These are some of my languages i speak.</div>
+		    <div class="description">These are some of my languages I speak.</div>
 		  </div>
 		  <div class="extra content">
 		    <p class="left floated created"><i class="germany flag"></i> German</p>
@@ -202,7 +202,7 @@
 					helpdesk.
 				</div>
 				<div class="extra">
-	  				<p class="created"><i class="spain flag"></i>Sevilla, Spain</p>
+	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
 				</div>
 				<div class="ui right floated main menu">
 					<a class="bug popup icon item" data-content="Edit this entry" href="#">
@@ -236,7 +236,7 @@
 					Netbeast at the new.New festival, after the internship.
 				</div>
 				<div class="extra">
-	  				<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+	  				<p class="created"><i class="spain flag"></i>Sevilla, Spain</p>
 				</div>
 				<div class="ui right floated main menu">
 					<a class="bug popup icon item" data-content="Edit this entry" href="#">
