neutral CV update

--- a/index.html
+++ b/index.html
@@ -59,36 +59,36 @@
 					<div class="ui dimmer">
 						<div class="content">
 							<div class="center">
-								<div class="ui inverted button">Falk Heger</div>
+								<div class="ui inverted button">Your Name</div>
 							</div>
 						</div>
 					</div>
-					<img src="img/falk.jpg">
+					<img src="img/picture.jpg">
 				</div>
 				<div class="content">
-					<div class="header">Falk Heger</div>
+					<div class="header">YOUR NAME</div>
 					<div class="meta">
-						<a class="group" href="https://www.zu.de/studium-weiterbildung/cme/index.php" target="_blank">B.A. Corporate Management & Economics</a><br>
-						<a class="group" href="http://codecats.io/#team" target="_blank">Co-Founder CodeCats</a><br>
-						<p class="group">IT StudentSupport</p>
+						<a class="group" href="#" target="_blank">Your Studies</a><br>
+						<a class="group" href="#" target="_blank">Job Title #1</a><br>
+						<a class="group" href="#" target="_blank">Job Title #2</a>
 					</div>
-					<div class="description">This is my personal online CV, designed with HTML, CSS and JavaScript. In the backend will be running Python Flask  to update it, whenever it needs to be updated!</div>
+					<div class="description">Here you should write a small pitch about yourself. For example who you are, what interests you have and / or why someone should hire you.</div>
 				</div>
 				<div class="extra content">
 					<p class="right floated created">E-Mail</p>
-					<a class="friend" href="mailto:f.heger@zeppelin-university.net">f.heger@zeppelin-university.net</a>
+					<a class="friend" href="mailto:#">your.mail@yourmail.com</a>
 				</div>
 				<div class="extra content">
 					<p class="right floated created">Mobile</p>
-					<p class="friend">+49 123 4567 8910</p>
+					<p class="friend">+12 345 6789 1011</p>
 				</div>
 				<div class="extra content">
 					<p class="right floated created">Address</p>
 					<p class="friend">
-						Street 123<br>
-						Room 123<br>
-						12345  City<br>
-						Germany
+						Steet 123<br>
+						Additional<br>
+						ZIP City<br>
+						Country
 					</p>
 				</div>
 			</div>
@@ -104,11 +104,32 @@
 					</div>
 				</div>
 				<div class="content">
-					<div class="header"><i class="wechat icon"></i> LANGUAGES</div>
+					<div class="header"><i class="settings icon"></i> SKILLS</div>
 					<div class="description">These are some of my skills in my huge skillset, which can be evidenced in my former work experience.</div>
 				</div>
 				<div class="extra content">
-					<p class="left floated created">HTML / CSS</p>
+					<p class="left floated created">Skill #1</p>
+					<p class="right floated">100%</p>
+				</div>
+				<div class="extra content">
+					<p class="left floated created">Skill #2</p>
+					<p class="right floated">50%</p>
+				</div>
+				<div class="extra content">
+					<p class="left floated created">Skill #3</p>
+					<p class="right floated">75%</p>
+				</div>
+				<div class="extra content">
+					<p class="left floated created">Skill #4</p>
+					<p class="right floated">66%</p>
+				</div>
+				<div class="extra content">
+					<p class="left floated created">Skill #5</p>
+					<p class="right floated">100%</p>
+				</div>
+				<div class="extra content">
+					<p class="left floated created">Skill #6</p>
+					<p class="right floated">90%</p>
 				</div>
 			</div>
 
@@ -123,23 +144,20 @@
 					</div>
 				</div>
 				<div class="content">
-					<div class="header"><i class="settings icon"></i> SKILLS</div>
+					<div class="header"><i class="wechat icon"></i> LANGUAGES</div>
 					<div class="description">These are some of my languages I speak.</div>
 				</div>
 				<div class="extra content">
-					<div class="ui basic demo progress">
-						<div class="ui indicating demo progress">
-							<div class="bar"></div>
-							<div class="label">Funding</div>
-						</div>
-					</div>
 					<p class="left floated created"><i class="germany flag"></i> German</p>
+					<p class="right floated">Native</p>
 				</div>
 				<div class="extra content">
 					<p class="left floated created"><i class="gb flag"></i> English</p>
+					<p class="right floated">C2</p>
 				</div>
 				<div class="extra content">
 					<p class="left floated created"><i class="china flag"></i> Chinese</p>
+					<p class="right floated">A1</p>
 				</div>
 			</div>
 		</div><!--END OF LEFT BOX-->
@@ -156,24 +174,19 @@
 			<div class="ui relaxed divided items">
 				<div class="item">
 					<div class="ui small image">
-						<img src="img/cc_logo.png">
+						<img src="img/image.png">
 					</div>
 					<div class="content">
-						<p class="header">Head of Project & Co-Founder</p>
+						<p class="header">Job Title #1</p>
 						<div class="meta">
-							<p class="created"><a class="meta" href="http://codecats.io" target="_blank">CodeCats</a> | 2015 - TODAY</p>
+							<p class="created"><a class="meta" href="#" target="_blank">Company</a> | MM/YYYY - MM/YYYY</p>
 						</div>
 						<div class="description">
-							Co-Founded the initiative in 2015 with
-							fellow students to motivate young people
-							to develop coding skills. Tasks vary
-							from organizing an annual three-month
-							coding bootcamp to hosting workshops
-							and acquiring supporters.
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 						</div>
 						<div class="extra">
-							<img src="img/falk.png" class="ui circular avatar image"> Reference: <a class="created" href="mailto:f.heger@zeppelin-university.net">Falk Heger</a>
-							<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+							<img src="img/picture.jpg" class="ui circular avatar image"> Reference: <a class="created" href="mailto:#">Your Reference</a>
+							<p class="created"><i class="germany flag"></i>City, Country</p>
 						</div>
 						<div class="ui right floated main menu">
 							<a class="bug popup icon item" data-content="Edit this entry" href="#"><i class="edit icon"></i></a>
@@ -186,23 +199,18 @@
 			<div class="ui relaxed divided items">
 				<div class="item">
 					<div class="ui small image">
-						<img src="img/zu_logo.png">
+						<img src="img/image.png">
 					</div>
 					<div class="content">
-						<p class="header">IT StudentSupport</p>
+						<p class="header">Job Title #2</p>
 						<div class="meta">
-							<p class="created"><a class="meta" href="https://www.zu.de" target="_blank">Zeppelin University</a> | 2014 - TODAY</p>
+							<p class="created"><a class="meta" href="#" target="_blank">Company</a> | MM/YYYY - MM/YYYY</p>
 						</div>
 						<div class="description">
-							Leading the IT Student Support. Providing
-							technical support to all students and
-							employees, repairing laptops / computers
-							and solving soft- and hardware problems,
-							both in person as well as via a
-							helpdesk.
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 						</div>
 						<div class="extra">
-							<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+							<p class="created"><i class="germany flag"></i>City, Country</p>
 						</div>
 						<div class="ui right floated main menu">
 							<a class="bug popup icon item" data-content="Edit this entry" href="#"><i class="edit icon"></i></a>
@@ -215,25 +223,18 @@
 			<div class="ui relaxed divided items">
 				<div class="item">
 					<div class="ui small image">
-						<img src="img/netbeast.png">
+						<img src="img/image.png">
 					</div>
 					<div class="content">
-						<p class="header">Business Development</p>
+						<p class="header">Job Title #3</p>
 						<div class="meta">
-							<p class="created"><a class="meta" href="https://netbeast.co/" target="_blank">Netbeast SL</a> | 2016 - 2016</p>
+							<p class="created"><a class="meta" href="#" target="_blank">Company</a> | MM/YYYY - MM/YYYY</p>
 						</div>
 						<div class="description">
-							Internship as business developer for the
-							European and North-American market
-							at a near market entry startup. Key tasks
-							included go to market strategy, preparing
-							business cooperation and creating
-							presentations for the acquisition.
-							Position as Visiting Associate, including representing
-							Netbeast at the new.New festival, after the internship.
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 						</div>
 						<div class="extra">
-							<p class="created"><i class="spain flag"></i>Sevilla, Spain</p>
+							<p class="created"><i class="spain flag"></i>City, Country</p>
 						</div>
 						<div class="ui right floated main menu">
 							<a class="bug popup icon item" data-content="Edit this entry" href="#"><i class="edit icon"></i></a>
@@ -251,20 +252,20 @@
 			<div class="ui relaxed divided items">
 				<div class="item">
 					<div class="ui small image">
-						<img src="img/zu_logo.png">
+						<img src="img/image.png">
 					</div>
 					<div class="content">
-						<p class="header">B.A. Corporate Management & Economics</p>
+						<p class="header">Studies #1</p>
 						<div class="meta">
-							<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2014 - TODAY</p></p>
+							<p class="created"><a class="meta" href="#" target="_blank">University</a> | MM/YYYY - MM/YYYY</p></p>
 						</div>
 						<div class="description">
-							Currently enrolled in the 6th semester of the best university there is. 
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 						</div>
 						<div class="extra">
-							<p class="created">Current German Grade: 1,0<br>
-							Coach: Prof Dr Stephan A. Jansen</p>
-							<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+							<p class="created">Current German Grade: 1.0<br>
+							Coach: Your Coach Name</p>
+							<p class="created"><i class="germany flag"></i>City, Country</p>
 						</div>
 						<div class="ui right floated main menu">
 							<a class="bug popup icon item" data-content="Edit this entry" href="#"><i class="edit icon"></i></a>
@@ -277,19 +278,19 @@
 			<div class="ui relaxed divided items">
 				<div class="item">
 					<div class="ui small image">
-						<img src="img/zu.jpg">
+						<img src="img/image.png">
 					</div>
 					<div class="content">
-						<p class="header">Humboldt Project - Investments in Cybersecurity</p>
+						<p class="header">Studies #2</p>
 						<div class="meta">
-							<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2016 - TODAY</p></p>
+							<p class="created"><a class="meta" href="#" target="_blank">University</a> | MM/YYYY - MM/YYYY</p></p>
 						</div>
 						<div class="description">
-							Currently enrolled in the 6th semester of the best university there is. 
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
 						</div>
 						<div class="extra">
-							<p class="created">Supervisor: Prof Dr Jörn von Lucke | M.A. Katharina 'Tinka' Große</p>
-							<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+							<p class="created">Supervisor: Your Supervisor</p>
+							<p class="created"><i class="germany flag"></i>City, Country</p>
 						</div>
 						<div class="ui right floated main menu">
 							<a class="bug popup icon item" data-content="Edit this entry" href="#"><i class="edit icon"></i></a>
@@ -302,20 +303,20 @@
 			<div class="ui relaxed divided items">
 				<div class="item">
 					<div class="ui small image">
-						<img src="img/zu.jpg">
+						<img src="img/image.png">
 					</div>
 					<div class="content">
-						<p class="header">Zeppelin Project - Cities</p>
+						<p class="header">Studies #3</p>
 						<div class="meta">
-							<p class="created"><a class="meta" href="https://www.zu.de/" target="_blank">Zeppelin University</a> | 2014 - 2015</p></p>
+							<p class="created"><a class="meta" href="#" target="_blank">University</a> | MM/YYYY - MM/YYYY</p></p>
 						</div>
 						<div class="description">
-							Currently enrolled in the 6th semester of the best university there is. 
+							Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 						</div>
 						<div class="extra">
-							<p class="created">German Grade: 1,3<br>
-							Supervisor: Prof Dr phil Markus Rhomberg</p>
-							<p class="created"><i class="germany flag"></i>Friedrichshafen, Germany</p>
+							<p class="created">German Grade: 1.0<br>
+							Supervisor: Your Supervisor</p>
+							<p class="created"><i class="germany flag"></i>City, Country</p>
 						</div>
 						<div class="ui right floated main menu">
 							<a class="bug popup icon item" data-content="Edit this entry" href="#"><i class="edit icon"></i></a>
@@ -329,7 +330,7 @@
 
 	<!--ADD BUTTON-->
 	<div class="ui animated fade primary button addbutton">
-		<a href="create.html" style="color:white;">
+		<a href="#" style="color:white;">
 			<div class="visible content"><i class="add icon"></i></div>
 			<div class="hidden content">Add</div>
 		</a>
@@ -342,56 +343,4 @@
 		</div>
 	</div>
 
-	<!--SCRIPT-->
-	<script type="text/javascript">
-		$(document)
-		.ready(function() {
-			$('.attached.progress.demo')
-				.progress({
-				label   : false,
-				value   : Math.floor(Math.random() * 5) + 1
-				})
-				;
-			$('.basic.progress.demo')
-				.progress({
-				label   : false,
-				value   : Math.floor(Math.random() * 5) + 1,
-				text    : {
-				active  : '{percent}% Complete',
-				success : 'Done!'
-				}
-				})
-				;
-			$('.indicating.progress.demo')
-				.progress({
-				label   : true,
-				total   : 10,
-				value   : Math.floor(Math.random() * 5) + 1,
-				text    : {
-				active  : '{percent}% Done',
-				success : 'Completed!'
-				}
-				})
-				;
-			$('.file.progress.demo')
-				.progress({
-				label: false,
-				text: {
-				active  : 'Uploading {value} of {total}',
-				success : '{total} Files Uploaded!'
-				}
-				})
-				;
-			var progress = function() {
-			$('.demo.progress').progress('increment');
-			setTimeout(progress, (Math.random() * 2000) + 300);
-		};
-		setTimeout(progress, 1000);
-
-		setInterval(function() {
-			$('.demo.progress').progress('reset');
-		}, 30000);
-		})
-		;
-	</script>
 </body>
